--- a/CSS/leon.css
+++ b/CSS/leon.css
@@ -239,7 +239,7 @@ header .links .icon span:nth-child(2) {
 }
 .services .services-content .service p {
   font-weight: 300;
-  color: var(--special-heading-color);
+  color: #777;
   line-height: 1.6;
 }
 .services .services-content .col .image {
